cambios en el layout y el logo

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="/Logo.png" />
   <!-- TODO: Set the document title to the name of your application -->
   <title>SmartGrowth OPS</title>
   <meta name="description" content="Gestion de operaciones de Dron" />
-  <meta name="author" content="Farm Flyer" />
+  <meta name="author" content="SmartGrowth OPS" />
 
   <!-- TODO: Update og:title to match your application name -->
   <meta property="og:title" content="SmartGrown Ops" />
-  <meta property="og:description" content="Todos amamos al benevolo general Kroll -Con cariño niñita" />
+  <meta property="og:description" content="Gestion de operaciones de Dron" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="" />
 
